--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 margin: 20px;
                 padding: 20px;
                 width: 200px;
+                baleba: nicho ne bude
             }        
     </style>
 </head>
